# Vla-Inference-Acceleration

./: .gitignore  README.md
GR00T/Cache_GR00T/: Dockerfile  ENVIRONMENT_SETUP_README.md  README.md  atm_alpha_beta_goal.json  atm_alpha_beta_long.json  docker-compose.yml  environment_groot_test.yml  environment_libero_test.yml  requirements.inference.txt  requirements.libero.txt  run_gr00t_cache.sh  run_gr00t_cache_e2e.py  run_gr00t_cache_example.py  run_inference_server.sh  run_libero_eval.sh
GR00T/Cache_GR00T/environments/: README.md  libero_env.yml  requirements_libero.txt
GR00T/Cache_GR00T/gr00t_cache/: __init__.py  ablation.py  adapter.py  attention_wrapper.py  cache_manager.py  cli.py  config.py  correctness.py  dit_cache.py  dummy_model.py  flops_estimator.py  model_flops.py  profiling.py  token_index_map.py  utils.py
GR00T/Cache_GR00T/gr00t_cache_results/: comparison.json  flops.json  measurements.csv  summary.json
GR00T/Cache_GR00T/scripts/: inference_service_cache.py
GR00T/Cache_GR00T/tools/: benchmark_gr00t_cache.py  benchmark_gr00t_flops.py
GR00T/Prune_GR00T/: .dockerignore  Dockerfile  README.md  atm_alpha_beta_object.json  atm_alpha_beta_spatial.json  requirements.inference.txt  requirements.libero.txt  run_inference_server.sh  run_libero_eval.sh
GR00T/Prune_GR00T/tools/: benchmark_gr00t_fastv_profile.py  check_cuda_available.py  pruning_bench_common.py
GR00T/Quant_GR00T/: .dockerignore  .gitignore  Dockerfile  README.md  orin.Dockerfile  requirements.inference.txt  run_inference_server.sh  run_libero_eval.sh
GR00T/Quant_GR00T/environments/: groot_env.yml  requirements_gr00t.txt
GR00T/Quant_GR00T/scripts/: scan_linear_layers.py
GR00T/Quant_GR00T/tools/: benchmark_gr00t_latency.py  benchmark_gr00t_memory.py  calc_gr00t_duquant_memory.py  calculate_groot_memory.py  calculate_groot_memory_simple.py  calibrate_atm_dit.py  calibrate_atm_simpler.py  calibrate_atm_simpler_perhead_ohb.py  check_atm_simple.py  check_cuda_available.py  collect_gr00t_actions.py  compare_gr00t_actions.py  compute_real_libero_metrics.py  diagnose_atm.py  quantvla_bench_common.py  quantvla_env.sh  run_quantvla_inference_server.sh  run_quantvla_local_benchmarks.sh  run_quantvla_real_libero_benchmark.sh  summarize_quantvla_results.py  visualize_atm_effects.py  visualize_atm_logit_std.py  (+5 more)
Openvla/Cache_Openvla/: .dockerignore  .gitignore  Dockerfile  PROJECT_STRUCTURE.md  README.md  RUN_EXPERIMENT.md  docker-compose.yml  local_config.example.sh  run_latency_experiment.sh
Openvla/Prune_Openvla/Openvla/src/openvla/: pyproject.toml
Openvla/Prune_Openvla/Openvla/src/openvla/experiments/robot/: openvla_utils.py  robot_utils.py
Openvla/Prune_Openvla/Openvla/src/openvla/experiments/robot/bridge/: bridgev2_utils.py  run_bridgev2_eval.py
Openvla/Prune_Openvla/Openvla/src/openvla/experiments/robot/libero/: libero_requirements.txt  libero_utils.py  run_libero_eval.py
Openvla/Prune_Openvla/Openvla/src/openvla/experiments/robot/libero/libero/libero/benchmark/: __init__.py
Openvla/Prune_Openvla/Openvla/src/openvla/experiments/robot/libero/libero/libero/utils/: torch_load.py
Openvla/Prune_Openvla/Openvla/src/openvla/experiments/robot/libero/libero/lifelong/: evaluate.py  metric.py
Openvla/Prune_Openvla/Openvla/src/openvla/prismatic/models/vlms/: base_vlm.py
Openvla/Prune_Openvla/Openvla/src/openvla/transformers/src/transformers/models/llama/: modeling_llama.py
Openvla/Prune_Openvla/Openvla/src/openvla/vla_pruner_srcipts/: download_model_local.py
Openvla/Prune_Openvla/Openvla/src/openvla/vla_pruner_srcipts/run_fastv/: run_10_fastv.sh  run_goal_fastv.sh  run_object_fastv.sh  run_spatial_fastv.sh
Openvla/Prune_Openvla/Openvla/src/openvla/vla_pruner_srcipts/run_sparsevlm/: run_10_sparsevlm.sh  run_goal_sparsevlm.sh  run_object_sparsevlm.sh  run_spatial_sparsevlm.sh
Openvla/Prune_Openvla/Openvla/src/openvla/vla_pruner_srcipts/run_vla_pruner/: run_10.sh  run_10_prefil.sh  run_goal.sh  run_goal_prefil.sh  run_object.sh  run_object_prefil.sh  run_spatial.sh  run_spatial_prefil.sh
Openvla/Quant_Openvla/: .dockerignore  Dockerfile  README.md  environment.yml
Openvla/Quant_Openvla/openvla/: pyproject.toml  requirements-min.txt
Openvla/Quant_Openvla/openvla/experiments/robot/: openvla_direct_quant.py  openvla_fast_action.py  openvla_profile.py
Openvla/Quant_Openvla/openvla/prismatic/: __init__.py
Openvla/Quant_Openvla/openvla/vla-scripts/: deploy.py
(+34 files in other folders)
